<?xml version="1.0" encoding="utf-8"?>

<!--
@Project: FiCode

@Location: res/menu

@Name: menu_activity_fi_code.xml

@Description: XML resource defining the UI architecture in an activity, or in a component of a UI.
This resource defines the UI architecture for FiCode (Activity), providing the structure for its menu.

@Author: Giacomo Marciani (giacomo.marciani@gmail.com)

@Creation: 20.03.2013

@Last Update: 03.04.2013
-->

<!-- Root Layout -->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/miLanguageSettings"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/LanguageSettings"
        android:icon="@drawable/ic_launcher_world"/>
    <item
        android:id="@+id/miOmocodiaSettings"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/OmocodiaSettings"
        android:icon="@drawable/ic_launcher_settings"/>
    <item
        android:id="@+id/miQuit"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/Quit"
        android:icon="@drawable/ic_launcher_quit"/>

</menu>