<?xml version="1.0" encoding="utf-8"?>

<!--
@Project: FiCode

@Location: res/layout

@Name: activity_fi_code.xml

@Description: XML resource defining the UI architecture in an activity, or in a component of a UI.
This resource defines the UI architecture for FiCode (Activity), providing the PORTRAIT orientation support.

@Author: Giacomo Marciani (giacomo.marciani@gmail.com)

@Creation: 20.03.2013

@Last Update: 03.04.2013
-->

<!-- Root Layout -->
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llvMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FiCode" >

    <!-- Lastname, Firstname -->
    <LinearLayout
        android:id="@+id/llhPerson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp" >

        <EditText
            android:id="@+id/etLastname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/Lastname"
            android:inputType="textCapWords"
            android:freezesText="true" > 

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/etFirstname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/Firstname"
            android:inputType="textCapWords"
            android:freezesText="true" />
    </LinearLayout>

    <!-- Birthday, Gender -->
    <LinearLayout
        android:id="@+id/llhBirthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/llhPerson"        
        android:paddingBottom="20dp" >
        
        <RadioGroup
            android:id="@+id/rgGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="15dp" >

            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"                
                android:text="@string/Male" />

            <RadioButton
                android:id="@+id/rbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Female" />            
        </RadioGroup>

        <DatePicker
            android:id="@+id/dpBirthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:calendarViewShown="false" /> <!-- setting to improve compatibility -->                
    </LinearLayout>
    
    <!-- City, Browse -->
    <RelativeLayout
        android:id="@+id/llhCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/llhBirthday"
        android:paddingBottom="15dp" >

        <EditText
            android:id="@+id/etCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/ibtnBrowse"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/ibtnBrowse"
            android:ems="10"
            android:hint="@string/City"
            android:inputType="textCapWords"
            android:freezesText="true" />
        
        <ImageButton
            android:id="@+id/ibtnBrowse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/Browse"
            android:src="@drawable/ic_action_search" />

    </RelativeLayout>

    <!-- Fiscal Code -->
    <LinearLayout
        android:id="@+id/llhFiCode"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_below="@id/llhCity" >

        <TextView
            android:id="@+id/tvFiCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/FiscalCode"
            android:textIsSelectable="true"
            android:textSize="20sp"
            android:textStyle="bold"
            android:freezesText="true" />

    </LinearLayout>    
</RelativeLayout>